payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Provider_Termination_Request__c/Provider_Termination_Request__c.object-meta.xml
<CustomObject>
    <label>Provider Termination Request</label>
    <nameField>
        <displayFormat>PTR-{0000}</displayFormat>
        <label>Provider Termination Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Termination Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>