payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Provider_Termination_Request__c/fields/Active_Authorizations_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Authorizations_Count__c</fullName>
    <label>Active Authorizations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>