payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Provider_Termination_Request__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Provider</label>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipLabel>Provider Termination Requests</relationshipLabel>
    <relationshipName>Provider_Termination_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>