payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Provider_Termination_Request__c/fields/Impacted_Members_Count__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Members_Count__c</fullName>
    <label>Impacted Members Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>